# MBU_OS2Forms_API

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: automation_server.py  befordring.py  kommunal_frokost.py  skoleferie.py  udskrivning.py
app/core/: config.py
app/db/: database.py
app/utils/: database.py  helper_functions.py
